# pyhvac

./: .gitignore  LICENSE  README  README.md  pyproject.toml  setup.py  simple-setup.py
.github/workflows/: build_wheels.yml
dist.keep/: pyhvac-0.0.4-cp310-cp310-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  pyhvac-0.0.4-cp310-cp310-manylinux_2_17_i686.manylinux2014_i686.whl  pyhvac-0.0.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pyhvac-0.0.4-cp310-cp310-musllinux_1_1_aarch64.whl  pyhvac-0.0.4-cp310-cp310-musllinux_1_1_i686.whl  pyhvac-0.0.4-cp310-cp310-musllinux_1_1_x86_64.whl  pyhvac-0.0.4-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  pyhvac-0.0.4-cp311-cp311-manylinux_2_17_i686.manylinux2014_i686.whl  pyhvac-0.0.4-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pyhvac-0.0.4-cp311-cp311-musllinux_1_1_aarch64.whl  pyhvac-0.0.4-cp311-cp311-musllinux_1_1_i686.whl  pyhvac-0.0.4-cp311-cp311-musllinux_1_1_x86_64.whl  pyhvac-0.0.4-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  pyhvac-0.0.4-cp312-cp312-manylinux_2_17_i686.manylinux2014_i686.whl  pyhvac-0.0.4-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pyhvac-0.0.4-cp312-cp312-musllinux_1_1_aarch64.whl  pyhvac-0.0.4-cp312-cp312-musllinux_1_1_i686.whl  pyhvac-0.0.4-cp312-cp312-musllinux_1_1_x86_64.whl
pyhvac/: __init__.py  __main__.py  irhvac.py
pyhvac/plugins/: README  aeg.py  airton.py  airwell.py  alaska.py  amana.py  amcor.py  arduino.py  argo.py  aux.py  beko.py  bosch.py  carrier.py  centek.py  comfee.py  coolix.py  cooper-hunter.py  cooper_hunter.py  corona.py  daewoo.py  daikin.py  danby.py  delonghi.py  ecoclim.py  ekokai.py  electra.py  electrolux.py  eurom.py  frigidaire.py  fujitsu.py  ge.py  goodweather.py  gree.py  green.py  haier.py  hitachi.py  hvaclib.py  irhvacbase.py  kastron.py  kaysun.py  (+40 more)
